--- a/Aquarium life/Info.plist
+++ b/Aquarium life/Info.plist
@@ -53,25 +53,29 @@
 			<key>UIApplicationShortcutItemType</key>
 			<string>com.sahil.satralkar.AquariumLife.calculators</string>
 		</dict>
-        <dict>
-            <key>UIApplicationShortcutItemIconSymbolName</key>
-            <string>heart.fill</string>
-            <key>UIApplicationShortcutItemTitle</key>
-            <string>Care Sheets</string>
-            <key>UIApplicationShortcutItemType</key>
-            <string>com.sahil.satralkar.AquariumLife.CareSheets</string>
-        </dict>
-        <dict>
-            <key>UIApplicationShortcutItemIconSymbolName</key>
-            <string>note.text</string>
-            <key>UIApplicationShortcutItemTitle</key>
-            <string>My Notes</string>
-            <key>UIApplicationShortcutItemType</key>
-            <string>com.sahil.satralkar.AquariumLife.MyNotes</string>
-        </dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconSymbolName</key>
+			<string>heart.fill</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Care Sheets</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>com.sahil.satralkar.AquariumLife.CareSheets</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconSymbolName</key>
+			<string>note.text</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>My Notes</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>com.sahil.satralkar.AquariumLife.MyNotes</string>
+		</dict>
 	</array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
