--- a/Aquarium life/Aquarium life.entitlements
+++ b/Aquarium life/Aquarium life.entitlements
@@ -12,5 +12,9 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.sahil.satralkar.AquariumLife</string>
+	</array>
 </dict>
 </plist>
