Added intent definition file

--- a/Aquarium life/Info.plist
+++ b/Aquarium life/Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>SelectAquariumIntent</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
