--- a/AquariumLifeIntents/Info.plist
+++ b/AquariumLifeIntents/Info.plist
@@ -19,20 +19,20 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
-        <dict>
-            <key>IntentsRestrictedWhileLocked</key>
-            <array/>
-            <key>IntentsRestrictedWhileProtectedDataUnavailable</key>
-            <array/>
-            <key>IntentsSupported</key>
-            <array>
-                <string>SelectAquariumIntent</string>
-            </array>
-        </dict>
+		<dict>
+			<key>IntentsRestrictedWhileLocked</key>
+			<array/>
+			<key>IntentsRestrictedWhileProtectedDataUnavailable</key>
+			<array/>
+			<key>IntentsSupported</key>
+			<array>
+				<string>SelectAquariumIntent</string>
+			</array>
+		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.intents-service</string>
 		<key>NSExtensionPrincipalClass</key>
